# superfaktura-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
docs/: API.md  DEPLOYMENT.md
